# mindflow-api

./: .dockerignore  .env.example  .env.test.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  INCONSISTENCIES.md  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 2026_03_01_1800-0001_create_users_table.py  2026_03_01_1801-0002_create_refresh_tokens_table.py  2026_03_01_1802-0003_create_audit_logs_table.py  2026_03_01_1900-0004_create_tenants_and_user_tenant_ids.py  2026_03_01_1901-0005_create_schedule_configurations_table.py  2026_03_04_2000-0006_make_schedule_configuration_unique_per_tenant.py  2026_03_04_2100-0007_create_patients_table.py  2026_03_05_0001-0008_add_schedule_configurations_tenant_fk.py  2026_03_05_1200-0009_create_schedule_appointments_tables.py  2026_03_08_2100-0010_create_medical_records_table.py  2026_03_17_1200-0011_add_finance_feature.py  2026_03_17_1300-0012_add_notification_feature.py  2026_03_21_1200-0013_add_notification_qstash_message_id.py
docs/: README.md  api-reference.md  database-tenancy-audit.md  docs-standards.md  feature-template.md  folder-organization.md  patterns-and-rules.md  system-flow.md  testing-and-quality.md
docs/features/: auth.md  export.md  finance.md  medical-record.md  notification.md  patient.md  schedule-config.md  schedule.md  tenant.md  user.md
scripts/: create_admin.py
src/: main.py
src/config/: __init__.py  cors_config.py  settings.py
src/database/: __init__.py  base.py  client.py  dependencies.py
src/features/auth/: dependencies.py  exceptions.py  jwt_utils.py  models.py  openapi.py  router.py  schemas.py  service.py
src/features/export/: __init__.py  openapi.py  router.py  runtime.py  schemas.py  service.py
src/features/finance/: __init__.py  exceptions.py  models.py  openapi.py  router.py  schemas.py  service.py  storage.py
src/features/medical_record/: __init__.py  exceptions.py  models.py  openapi.py  router.py  schemas.py  service.py  storage.py
src/features/notification/: __init__.py  delivery.py  exceptions.py  models.py  openapi.py  qstash.py  queue.py  router.py  runtime.py  schemas.py  service.py
src/features/patient/: __init__.py  exceptions.py  models.py  openapi.py  router.py  schemas.py  service.py  storage.py
src/features/schedule/: exceptions.py  models.py  openapi.py  router.py  schemas.py  service.py
src/features/schedule_config/: __init__.py  exceptions.py  models.py  openapi.py  router.py  schemas.py  service.py
src/features/tenant/: __init__.py  exceptions.py  models.py  openapi.py  router.py  schemas.py  service.py
src/features/user/: __init__.py  exceptions.py  models.py  openapi.py  router.py  schemas.py  service.py
src/shared/: __init__.py  schema_utils.py
src/shared/audit/: __init__.py  audit.py  audit_middleware.py
src/shared/middlewares/: docs_middleware.py
src/shared/pagination/: __init__.py  beanie_pagination.py  pagination.py  sqlalchemy_pagination.py
src/shared/pdf/: __init__.py  builder.py
src/shared/pdf/templates/: medical_record_export.html  patient_export.html
src/shared/qstash/: __init__.py  client.py
src/shared/redis/: __init__.py  client.py  session_ops.py
src/shared/storage/: __init__.py  backends.py
src/shared/tenancy/: __init__.py  dependencies.py  tenant_middleware.py
src/shared/validators/: __init__.py  password.py
tests/: conftest.py  test_openapi_contract.py
tests/config/: test_cors.py  test_cors_integration.py
tests/features/audit/: test_audit.py
tests/features/auth/: test_auth.py
tests/features/export/: test_export.py  test_export_qstash.py
tests/features/finance/: __init__.py  test_finance.py
tests/features/medical_record/: test_medical_record.py
tests/features/notification/: __init__.py  test_delivery.py  test_notification.py  test_notification_qstash.py
tests/features/patient/: __init__.py  test_patient.py
tests/features/schedule/: __init__.py  test_schedule.py  test_schedule_openapi.py
tests/features/schedule_config/: __init__.py  test_schedule_config.py
tests/features/tenant/: test_tenant.py
tests/features/user/: __init__.py  test_user.py
tests/shared/: test_database_client.py  test_docs_middleware.py
tests/shared/tenancy/: __init__.py  test_tenancy.py
tests/shared/validators/: test_password_validator.py
